Add header and footer templates

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Lista</title>
-    <link rel="stylesheet" href="css/styles.css">
-  </head>
-  <body>
+<%- include('header'); -%>
 
     <div class="box" id="heading">
       <h1><%= listTittle %></h1>
@@ -27,6 +20,4 @@
 
     </div>
 
-  </body>
-
-</html>
+  <%- include('footer'); -%>
